Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,12 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    re"
+    "    restaurant.keys\n",
+    "    return 'name'"
    ]
   },
   {
