--- a/index.ipynb
+++ b/index.ipynb
@@ -201,8 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    restaurant.keys()\n",
-    "    return "
+    "    returnrestaurant.keys()"
    ]
   },
   {
