Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,8 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    list(restaurant.keys())"
+    "    list(restaurant.keys())\n",
+    "    return"
    ]
   },
   {
