--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    "source": [
     "def restaurant_name(restaurant):\n",
     "    list(restaurant.keys())\n",
-    "    return"
+    "    return list(restaurant.keys())"
    ]
   },
   {
