Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,18 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    list(restaurant.keys())\n",
-    "    return list(restaurant.keys())[8]"
+    "    return list(restaurant.())[8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +215,7 @@
        "'name'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
