--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "def restaurant_rating(restaurant):\n",
-    "    pass"
+    "    return list(restaurant.values())[8]"
    ]
   },
   {
