--- a/index.ipynb
+++ b/index.ipynb
@@ -253,23 +253,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'builtin_function_or_method' object is not iterable",
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-56-921026012d31>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-55-cb728bbdd294>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfork_fig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not iterable"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-56-921026012d31>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    (list(fork_fig.keys)\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
-    "len(list(fork_fig.keys))"
+    "(list(fork_fig.keys)"
    ]
   },
   {
