--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    pass"
+    "    return list(restaurant.values())[-4]"
    ]
   },
   {
