Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    return list(restaurant.values())[-4] == list(alternative.values())[-4]"
+    "    return list(restaurant.values())[-4] >= list(alternative.values())[-4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "False"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,16 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
