--- a/index.ipynb
+++ b/index.ipynb
@@ -337,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    return list(restaurant.values())[-4] >= list(alternative.values())[-4]"
+    "    return list(restaurant.values())[-4] > list(alternative.values())[-4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "True"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
