--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    pass"
+    "    return list(restaurant.values())[-5] > list(alternative.values())[-4]"
    ]
   },
   {
