Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -421,26 +421,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return list(restaurant.values())[-5] > list(alternative.values())[-5]"
+    "    return list(restaurant.values())[-5] < list(alternative.values())[-5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,16 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "False"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
