--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    pass"
+    "    return list(restaurant.values())[-5] < list(alternative.values())[-5]"
    ]
   },
   {
