Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -498,17 +498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    return list(restaurant.values())[-4] > rating"
+    "    return list(restaurant.values())[-4] >= rating"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "True"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "False"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
