Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -548,16 +548,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
