--- a/index.ipynb
+++ b/index.ipynb
@@ -196,17 +196,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-90-e2989dd94740>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-90-e2989dd94740>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return restaurant \"name\"\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    return list(restaurant.values())[8]"
+    "    return restaurant \"name\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +224,7 @@
        "'Frontier Restaurant'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
