Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,26 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-90-e2989dd94740>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-90-e2989dd94740>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return restaurant \"name\"\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    return restaurant \"name\""
+    "    return restaurant['name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +215,7 @@
        "'Frontier Restaurant'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +235,7 @@
        "'Fork & Fig'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
